Bug 1082777: Support running of xpcshell on OSX with relative path invocation on Terminal. r=smichaud